replace more elab.local on the fly

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,8 @@ jobs:
       - run:
           name: Prepare CI for cypress
           command: |
+            sed -i 's/elab.local:3148/elabtmp/g' tests/docker-compose.yml
+            sed -i 's/elab.local/elabtmp/g' tests/docker-compose.yml
             sed -i 's/elab.local:3148/elabtmp/g' cypress.config.ts
             sed -i 's/elab.local:3148/elabtmp/g' tests/populate-config.yml
       - run:
