--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,11 @@ jobs:
       - run:
           name: Run Cypress e2e tests
           command: docker exec -it elab-cypress cypress run
+      - run:
+          name: check elabtmp logs
+          command: |
+             docker logs elabtmp 2>/dev/null
+             docker logs elabtmp 1>/dev/null
       #- run:
       #    name: Generate the php documentation
       #    # Note:  --setting=graphs.enabled=true has been removed because the graphs are too large
