--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -146,6 +146,14 @@ jobs:
           command: |
              docker logs elabtmp 2>/dev/null
              docker logs elabtmp 1>/dev/null
+      - run:
+          name: Extract Cypress results
+          command: |
+             docker cp elab-cypress:/e2e/tests/cypress/screenshots cypress/screenshots
+             docker cp elab-cypress:/e2e/tests/cypress/videos cypress/videos
+      - store_artifacts:
+          path: cypress
+          destination: cypress
       #- run:
       #    name: Generate the php documentation
       #    # Note:  --setting=graphs.enabled=true has been removed because the graphs are too large
