--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -137,11 +137,9 @@ jobs:
       #    name: Extract coverage HTML report
       #    command: docker cp elabtmp:/elabftw/tests/_output/coverage coverage-html
       - run:
-          name: Run Cypress e2e tests
-          command: docker exec -it elab-cypress cypress run
-      - run:
-          name: Extract Cypress results
+          name: Run Cypress e2e tests and extract artifacts
           command: |
+            docker exec -it elab-cypress cypress run
             docker cp elab-cypress:/e2e/tests/cypress/screenshots cypress/screenshots
             docker cp elab-cypress:/e2e/tests/cypress/videos cypress/videos
       - store_artifacts:
