--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -147,6 +147,15 @@ jobs:
           name: Reset database
           command: docker exec -it elabtmp bin/console dev:populate tests/populate-config.yml
       - run:
+          name: Fix permissions
+          command: |
+            docker exec -it elabtmp mkdir -p cache/purifier/{HTML,CSS,URI} cache/{elab,mpdf,twig}
+            docker exec -it elabtmp chown -R nginx:nginx cache
+            docker exec -it elabtmp chmod -R 777 cache
+            docker exec -it elabtmp chmod -R 777 tests/_output
+            docker exec -it elabtmp chown -R nginx:nginx uploads
+            docker exec -it elabtmp chmod -R 777 uploads
+      - run:
           name: Run Cypress e2e tests and extract artifacts
           command: |
             docker exec -it elab-cypress cypress run
