--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,6 @@ jobs:
             sed -i 's/elab.local/elabtmp/g' tests/docker-compose.yml
             sed -i 's/elab.local:3148/elabtmp/g' cypress.config.ts
             sed -i 's/elab.local:3148/elabtmp/g' tests/populate-config.yml
-            sed -i 's/toto@yopmail\.com/phpunit@example.com/g' tests/cypress/support/commands.js
-            sed -i 's/totototo/phpunitftw/g' tests/cypress/support/commands.js
-            sed -i 's/Toto/Phpunit/g' tests/cypress/support/commands.js
       - run:
           name: Build elabtmp image and start containers
           command: |
@@ -157,6 +154,7 @@ jobs:
             docker exec -it elabtmp chmod -R 777 uploads
       - run:
           name: Run Cypress e2e tests and extract artifacts
+          # have to save cypress exit code to first extract artifacts
           command: |
             docker exec -it elab-cypress cypress run
             cypressExitCode=$?
