--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "@types/marked": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
-    "cypress": "^12.0.0",
     "eslint": "^8.2.0",
     "postcss": "^8.4.7",
     "postcss-scss": "^4.0.3",
@@ -92,7 +91,7 @@
     "clean": "rm -rf apidoc/html _srcdoc src/ts/*.js src/ts/*.js.map web/app/js/*bundle.js src/node/*bundle.js web/app/js/*.LICENSE.txt web/app/js/*.min.js web/app/css/*.min.css web/app/css/*.min.css.map web/assets/ove/*",
     "codespell": "codespell --config src/tools/codespellrc",
     "csslint": "./node_modules/.bin/stylelint src/scss/*.scss",
-    "cy": "yarn run cypress run",
+    "cy": "tests/run.sh cy",
     "full": "yarn phpcs && yarn jslint && yarn csslint && yarn psalm && yarn phpstan && yarn test unit",
     "jslint": "eslint --ext .ts src/ts",
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
