--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     web:
         image: elabtmp
         build:
-          context: .
-          dockerfile: ./elabtmp.Dockerfile
+          context: ..
+          dockerfile: ./tests/elabtmp.Dockerfile
         container_name: elabtmp
         # restrict capabilities of the root user to the strict minimum
         # see CIS Docker Benchmark v1.5 5.3
@@ -94,5 +94,18 @@ services:
             - TZ=Europe/Paris
         networks:
             - elabftw-net
+
+    cypress:
+        image: elab-cypress
+        build:
+          context: ..
+          dockerfile: ./tests/elab-cypress.Dockerfile
+        container_name: elab-cypress
+        depends_on:
+            - web
+            - mysql
+        networks:
+            - elabftw-net
+
 networks:
     elabftw-net:
