OVE is now under @teselagen namespace (#4489)
* switch to new ove and bio-parsers package

* update bio-parsers and ove
now they provide a license

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "3dmol": "^2.0.2",
     "@deltablot/chemdoodle-web-mini": "^9.2.1",
     "@deltablot/malle": "^2.3.0",
-    "@deltablot/open-vector-editor-umd": "^18.0.0",
+    "@deltablot/tg-oss-ove-umd": "^0.3.2",
     "@fancyapps/fancybox": "3.5.*",
     "@fullcalendar/bootstrap": "^6.1.5",
     "@fullcalendar/core": "^6.1.5",
@@ -17,7 +17,7 @@
     "@fullcalendar/interaction": "^6.1.5",
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
-    "bio-parsers": "^9.0.1",
+    "@teselagen/bio-parsers": "^0.3.2",
     "bootstrap": "^4.5.0",
     "bootstrap-markdown-fa5": "2.10.*",
     "bootstrap-select": "^1.13.18",
@@ -43,8 +43,6 @@
     "tinymce": "^5.10.0",
     "ts-loader": "^9.1.1",
     "typescript": "^5.1.6",
-    "ve-range-utils": "^2.6.3",
-    "ve-sequence-utils": "^5.1.6",
     "webpack": "^5.9.0",
     "webpack-cli": "^5.0.0"
   },
@@ -95,7 +93,7 @@
     "full": "yarn phpcs && yarn jslint && yarn csslint && yarn psalm && yarn phpstan && yarn test unit",
     "jslint": "eslint --ext .ts src/ts",
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
-    "ove": "mkdir -p web/assets/ove/ && cp node_modules/@deltablot/open-vector-editor-umd/* web/assets/ove/ && rm -f web/assets/ove/open-vector-editor.js*",
+    "ove": "mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
