--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -49,6 +49,7 @@ users:
     firstname: Toto
     lastname: Le sysadmin
     team: Alpha
+    orgid: internal_id_1
     api_key: apiKey4Test
     create_experiments: true
     create_items: true
@@ -70,7 +71,7 @@ users:
     create_mfa_secret: true
 
   - email: demo@elabftw.net
-    password: demodemo
+    password: testPassword
     team: Alpha
     create_experiments: true
     create_templates: false
@@ -82,6 +83,11 @@ users:
     create_templates: true
 
   - team: Bravo
+
+  - email: somesamluser@example.com
+    team: Bravo
+    create_experiments: false
+    orgid: internal_id_42
 
   - team: Charlie
 
