--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,8 +125,8 @@ jobs:
             docker exec -it elabtmp chown -R nginx:nginx uploads
             docker exec -it elabtmp chmod -R 777 uploads
       - run:
-          name: Run unit tests
-          command: docker exec -it elabtmp php vendor/bin/codecept run --coverage --coverage-xml --coverage-html
+          name: Run unit and api tests
+          command: docker exec -it elabtmp php vendor/bin/codecept run --skip cypress --coverage --coverage-xml --coverage-html
       - run:
           name: Extract coverage report
           command: docker cp elabtmp:/elabftw/tests/_output/coverage.xml .
@@ -160,7 +160,26 @@ jobs:
             cypressExitCode=$?
             docker cp elab-cypress:/home/node/tests/cypress/screenshots/. cypress/screenshots
             docker cp elab-cypress:/home/node/tests/cypress/videos/. cypress/videos
+            # extract coverage reports
+            docker cp elabtmp:/elabftw/tests/_output/c3tmp/codecoverage.tar cypress_coverage.tar
+            tar -xf cypress_coverage.tar -C cypress_coverage_html
+            docker cp elabtmp:/elabftw/tests/_output/c3tmp/codecoverage.clover.xml cypress_coverage.clover.xml
             exit "$cypressExitCode"
+      - run :
+          name: Merge both coverage reports
+          command: |
+            docker exec -it elabtmp cd /elabftw/tests/_output \
+                && mkdir merge_cov \
+                && cp coverage.serialized merge_cov/unit_api.cov \
+                && cp c3tmp/codecoverage.serialized merge_cov/cypress.cov \
+                && cd merge_cov
+                && sed -i '1<?php return \unserialize(<<<\'END_OF_COVERAGE_SERIALIZATION\'' cypress.cov \
+                && echo 'END_OF_COVERAGE_SERIALIZATION);' >> cypress.cov \
+                && phpcov merge --clover merged_coverage.xml . \
+                && mkdir coverage-html-merged \
+                && phpcov merge --html coverage-html-merged .
+            docker cp elabtmp:/elabftw/tests/_output/merge_cov/coverage-merged.xml .
+            docker cp elabtmp:/elabftw/tests/_output/merge_cov/coverage-html-merged .
       - store_artifacts:
           path: phpdoc-html
           destination: phpdoc-html
@@ -172,6 +191,18 @@ jobs:
       - store_artifacts:
           path: cypress
           destination: cypress
+      - store_artifacts:
+          path: cypress_coverage_html
+          destination: cypress_coverage_html
+      - store_artifacts:
+          path: cypress_coverage.clover.xml
+          destination: cypress_coverage.clover.xml
+      - store_artifacts:
+          path: coverage-html-merged
+          destination: coverage-html-merged
+      - store_artifacts:
+          path: coverage-merged.xml
+          destination: coverage-merged.xml
 workflows:
   version: 2
   build_and_test:
