add missing line end escape

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,7 @@ jobs:
                 && mkdir merge_cov \
                 && cp coverage.serialized merge_cov/unit_api.cov \
                 && cp c3tmp/codecoverage.serialized merge_cov/cypress.cov \
-                && cd merge_cov
+                && cd merge_cov \
                 && sed -i '1<?php return \unserialize(\<<<\'END_OF_COVERAGE_SERIALIZATION\'' cypress.cov \
                 && echo 'END_OF_COVERAGE_SERIALIZATION);' >> cypress.cov \
                 && phpcov merge --clover merged_coverage.xml . \
