--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,7 +162,7 @@ jobs:
             docker cp elab-cypress:/home/node/tests/cypress/videos/. cypress/videos
             # extract coverage reports
             docker cp elabtmp:/elabftw/tests/_output/c3tmp/codecoverage.tar cypress_coverage.tar
-            tar -xf cypress_coverage.tar -C cypress_coverage_html
+            mkdir cypress_coverage_html && tar -xf cypress_coverage.tar -C cypress_coverage_html
             docker cp elabtmp:/elabftw/tests/_output/c3tmp/codecoverage.clover.xml cypress_coverage.clover.xml
             exit "$cypressExitCode"
       - run :
