--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,7 @@ jobs:
                 && cp coverage.serialized merge_cov/unit_api.cov \
                 && cp c3tmp/codecoverage.serialized merge_cov/cypress.cov \
                 && cd merge_cov \
-                && sed -i '1<?php return \unserialize(\<<<\'END_OF_COVERAGE_SERIALIZATION\'' cypress.cov \
+                && sed -i "1i <?php return \unserialize(\<<<'END_OF_COVERAGE_SERIALIZATION'" cypress.cov \
                 && echo "END_OF_COVERAGE_SERIALIZATION);" >> cypress.cov \
                 && phpcov merge --clover merged_coverage.xml . \
                 && mkdir coverage-html-merged \
