--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,14 +162,14 @@ jobs:
             docker cp elab-cypress:/home/node/tests/cypress/videos/. cypress/videos
             # extract coverage reports
             docker cp elabtmp:/elabftw/tests/_output/c3tmp/codecoverage.tar cypress-coverage.tar
-            mkdir cypress_coverage_html && tar -xf cypress-coverage.tar -C cypress-coverage_html
+            mkdir cypress-coverage-html && tar -xf cypress-coverage.tar -C cypress-coverage-html
             docker cp elabtmp:/elabftw/tests/_output/c3tmp/codecoverage.clover.xml cypress-coverage.clover.xml
             exit "$cypressExitCode"
       - run :
           name: Merge both coverage reports
           command: |
             docker exec -it elabtmp bash /elabftw/tests/merge-coverage-reports.sh
-            docker cp elabtmp:/elabftw/tests/_output/merge_cov/coverage-merged.xml .
+            docker cp elabtmp:/elabftw/tests/_output/merge_cov/coverage-merged.clover.xml .
             docker cp elabtmp:/elabftw/tests/_output/merge_cov/coverage-html-merged .
       - store_artifacts:
           path: phpdoc-html
