use typescript for cypress, add more test, fix some php stuff

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/marked": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "cypress": "^12.17.4",
     "eslint": "^8.2.0",
     "postcss": "^8.4.7",
     "postcss-scss": "^4.0.3",
@@ -91,8 +92,12 @@
     "csslint": "./node_modules/.bin/stylelint src/scss/*.scss",
     "cy": "tests/run.sh cy",
     "full": "yarn phpcs && yarn jslint && yarn csslint && yarn psalm && yarn phpstan && yarn test unit",
+    "jslint:all": "yarn run jslint && yarn run jslint:cy",
+    "jslint-ci:all": "yarn run jslint-ci && yarn run jslint-ci:cy",
     "jslint": "eslint --ext .ts src/ts",
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
+    "jslint:cy": "eslint tests/cypress/**/*.ts --fix",
+    "jslint-ci:cy": "eslint --quite tests/cypress/**/*.ts",
     "ove": "mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
