--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
     "jslint-ci:all": "yarn run jslint-ci && yarn run jslint-ci:cy",
     "jslint": "eslint --ext .ts src/ts",
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
-    "jslint:cy": "eslint tests/cypress/**/*.ts --fix",
-    "jslint-ci:cy": "eslint --quite tests/cypress/**/*.ts",
+    "jslint:cy": "eslint tests/cypress/**/*.ts",
+    "jslint-ci:cy": "eslint --quiet tests/cypress/**/*.ts",
     "ove": "mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
