--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/marked": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "cypress": "^12.17.4",
     "eslint": "^8.2.0",
     "postcss": "^8.4.7",
     "postcss-scss": "^4.0.3",
@@ -91,15 +92,19 @@
     "csslint": "./node_modules/.bin/stylelint src/scss/*.scss",
     "cy": "tests/run.sh cy",
     "full": "yarn phpcs && yarn jslint && yarn csslint && yarn psalm && yarn phpstan && yarn test unit",
+    "jslint:all": "yarn run jslint && yarn run jslint:cy",
+    "jslint-ci:all": "yarn run jslint-ci && yarn run jslint-ci:cy",
     "jslint": "eslint --ext .ts src/ts",
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
+    "jslint:cy": "eslint tests/cypress/**/*.ts",
+    "jslint-ci:cy": "eslint --quiet tests/cypress/**/*.ts",
     "ove": "mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
     "phpmetrics": "phpmetrics --report-html=metrics . && firefox metrics/index.html",
     "phpstan": "./vendor/bin/phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon",
-    "pre-commit": "yarn static && yarn phpcs-dry && yarn csslint && yarn jslint",
+    "pre-commit": "yarn phpcs-dry && yarn static && yarn csslint && yarn jslint:all",
     "psalm": "psalm --no-progress -c=src/tools/psalm.xml",
     "psalmall": "psalm -c=src/tools/psalm.xml --show-info=true",
     "rector": "./vendor/bin/rector process src --config src/tools/rector.php",
