--- a/src/tools/populate-config.yml.dist
+++ b/src/tools/populate-config.yml.dist
@@ -29,8 +29,7 @@ config:
   ldap_username: cn=admin,dc=example,dc=org
   # increase this a bit
   login_tries: 10
-  # the url of the dev install
-  url: "https://elab.local:3148"
+  s3_region: fr-par-42
 
 teams:
   - name: Alpha
