--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
           command: docker exec -it elabtmp bin/init db:install -r
       - run:
           name: Populate the database
-          command: docker exec -it elabtmp bin/console dev:populate src/tools/populate-config.yml.dist -y
+          command: docker exec -it elabtmp bin/init db:populate src/tools/populate-config.yml.dist -y
       - run:
           name: Fix permissions
           command: |
@@ -142,7 +142,7 @@ jobs:
           command: docker cp elabtmp:/elabftw/phpdoc-html phpdoc-html
       - run:
           name: Reset database
-          command: docker exec -it elabtmp bin/console dev:populate src/tools/populate-config.yml.dist -y
+          command: docker exec -it elabtmp bin/init db:populate src/tools/populate-config.yml.dist -y
       - run:
           name: Fix permissions
           command: |
