Add twigcs to ci pipelines (#4595)
* add twigcs as dev dependency to lint twig templates

* fix spacing in twig templates

* add twigcs to package.json

* fix some html bugs

* config file for twigcs

* remove unused twig variables

* phpcs + static

* fix html violations

* add twigcs to pre-commit

* eslint cypress files avoid videos and screenshots

* add twigcs to CI pipelines

* add semicolons to cypress.config.ts

* need s3 region to pass test

* make sure config settings from populate yaml file are written to db

* avoid fixed sleep time

* fix typo

* no need to wait for sql anymore

* add cypress test for healthcheck.php

* remove unused imports from bin/init

* fix issue with toggle pin

---------

Co-authored-by: Nicolas CARPi <nico-git@deltablot.email>

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
     "codeception/module-phpbrowser": "^3.0",
     "codeception/c3": "^2.8",
     "rector/rector": "^0.17.0",
-    "phpstan/phpstan": "^1.10"
+    "phpstan/phpstan": "^1.10",
+    "friendsoftwig/twigcs": "^6.2"
   },
   "autoload": {
     "psr-4": {
@@ -129,7 +130,10 @@
       "Elabftw\\Traits\\": [
         "src/traits"
       ]
-    }
+    },
+    "classmap": [
+      "src/tools/eLabFtwRuleset.twigcs.php"
+    ]
   },
   "license": "AGPL-3.0-or-later",
   "config": {
