--- a/package.json
+++ b/package.json
@@ -96,15 +96,15 @@
     "jslint-ci:all": "yarn run jslint-ci && yarn run jslint-ci:cy",
     "jslint": "eslint --ext .ts src/ts",
     "jslint-ci": "eslint --ext .ts --quiet src/ts",
-    "jslint:cy": "eslint tests/cypress/**/*.ts",
-    "jslint-ci:cy": "eslint --quiet tests/cypress/**/*.ts",
+    "jslint:cy": "eslint --ext .ts tests/cypress",
+    "jslint-ci:cy": "eslint --ext .ts --quiet tests/cypress",
     "ove": "mkdir -p web/assets/ove/ && bash -c 'cp node_modules/@deltablot/tg-oss-ove-umd/{index.umd.js,style.css} web/assets/ove/'",
     "phan": "phan --allow-polyfill-parser -k src/tools/phan-config.php",
     "phpcs": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v",
     "phpcs-dry": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php -v --dry-run --stop-on-violation",
     "phpmetrics": "phpmetrics --report-html=metrics . && firefox metrics/index.html",
     "phpstan": "./vendor/bin/phpstan analyse --no-progress --memory-limit 4G -c src/tools/phpstan.neon",
-    "pre-commit": "yarn phpcs-dry && yarn static && yarn csslint && yarn jslint:all",
+    "pre-commit": "yarn phpcs-dry && yarn static && yarn csslint && yarn jslint:all && yarn twigcs",
     "psalm": "psalm --no-progress -c=src/tools/psalm.xml",
     "psalmall": "psalm -c=src/tools/psalm.xml --show-info=true",
     "rector": "./vendor/bin/rector process src --config src/tools/rector.php",
@@ -113,6 +113,7 @@
     "static": "yarn psalm && yarn phpstan",
     "test": "tests/run.sh",
     "tinymce": "cp node_modules/tinymce/skins/ui/oxide/fonts/tinymce-mobile.woff web/app/css/tinymce/fonts/tinymce-mobile.woff && cp node_modules/tinymce/skins/ui/oxide/*.min.css web/app/css/tinymce/",
+    "twigcs": "php vendor/bin/twigcs",
     "unit": "tests/run.sh unit",
     "unit-ci": "php vendor/bin/codecept run unit",
     "watchcss": "sass --quiet-deps --watch src/scss/main.scss:web/assets/elabftw.min.css src/scss/pdf.scss:web/assets/pdf.min.css",
